[package]
name    = "benchmark-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum          = { version = "0.7", features = ["ws"] }
tokio         = { version = "1", features = ["full"] }
tower-http    = { version = "0.5", features = ["cors"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
reqwest       = { version = "0.12", features = ["json"] }
tokio-postgres = "0.7"
uuid          = { version = "1", features = ["v4", "serde"] }
chrono        = { version = "0.4", features = ["serde"] }
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow        = "1"
h3o           = "0.7"
