[package]
name    = "mobydb-tools"
version.workspace = true
edition.workspace = true
description = "MobyDB benchmark tools — generate data, run benchmarks"

[[bin]]
name = "generate_iot"
path = "src/bin/generate_iot.rs"

[[bin]]
name = "run_benchmark"
path = "src/bin/run_benchmark.rs"

[dependencies]
mobydb-core    = { path = "../crates/mobydb-core" }
mobydb-storage = { path = "../crates/mobydb-storage" }
mobydb-merkle  = { path = "../crates/mobydb-merkle" }
mobydb-query   = { path = "../crates/mobydb-query" }

h3o           = { workspace = true }
ed25519-dalek = { workspace = true }
rand          = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
hex           = { workspace = true }
clap          = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
chrono        = { workspace = true }
tokio         = { workspace = true }

# PostGIS access — async PostgreSQL via sqlx
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres"] }

# UUID for PostGIS sensor_id column
uuid = { version = "1", features = ["v4"] }
