[package]
name    = "mobydb-core"
version.workspace = true
edition.workspace = true

[dependencies]
h3o           = { workspace = true }
ed25519-dalek = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
bincode       = { workspace = true }
hex           = { workspace = true }
thiserror     = { workspace = true }
blake3        = { workspace = true }
chrono        = { workspace = true }
