[package]
name    = "mobydb-merkle"
version.workspace = true
edition.workspace = true

[dependencies]
mobydb-core    = { path = "../mobydb-core" }
mobydb-storage = { path = "../mobydb-storage" }
blake3         = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
hex            = { workspace = true }
chrono         = { workspace = true }
