[package]
name    = "mobydb-server"
version.workspace = true
edition.workspace = true

[dependencies]
mobydb-core    = { path = "../mobydb-core" }
mobydb-storage = { path = "../mobydb-storage" }
mobydb-merkle  = { path = "../mobydb-merkle" }
mobydb-query   = { path = "../mobydb-query" }
axum           = { workspace = true }
tokio          = { workspace = true }
tower-http     = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
hex            = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
