[package]
name    = "mobydb-storage"
version.workspace = true
edition.workspace = true

[dependencies]
mobydb-core = { path = "../mobydb-core" }
rocksdb     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
hex         = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
rand     = { workspace = true }
tempfile = { workspace = true }
